[package]
name = "day10"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
lazy_static = "1.4.0"
regex = "1.5.4"
structopt = "0.3.21"
thiserror = "1.0.22"
