[package]
name = "day12"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
failure = "0.1"
lalrpop-util = "0.16.2"
regex = "1.1"
util = { path = "../util" }

[build-dependencies]
lalrpop = "0.16.2"
