[package]
name = "day16"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
enum-iterator = "0.6.0"
parse-display = "0.5.0"
structopt = "0.3.21"
thiserror = "1.0.22"

[dev-dependencies]
maplit = "1.0.2"
