[package]
name = "day16"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
enum-iterator = "0.6.0"
pest = "2.1.3"
pest_consume = "1.1.0"
pest_derive = "2.1.0"
structopt = "0.3.21"
thiserror = "1.0.22"

[dev-dependencies]
maplit = "1.0.2"
